<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#F0F4FF">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">



        <!-- first section-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"

                android:background="@drawable/about_background1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/first_about_title"
                    android:text="@string/first_about_title"
                    android:textSize="25dp"
                    android:textStyle="bold"
                    android:textColor="@color/green"
                    android:gravity="center"
                    android:layout_marginTop="10dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/first_about_description"
                    android:text="@string/first_about_description"
                    android:gravity="center"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="30dp"
                    android:textColor="@color/white"
                    android:textSize="20dp"
                    android:fontFamily="sans-serif-condensed"/>
            </LinearLayout>

            <!--second section-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:background="@drawable/about_background2"
                android:padding="20dp">

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="350dp"
                    android:layout_margin="16dp"
                    app:cardCornerRadius="16dp"
                    app:cardElevation="0dp"
                    app:strokeWidth="0dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/founder2"
                        android:scaleType="centerCrop"/>

                </com.google.android.material.card.MaterialCardView>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/second_about_title"
                    android:text="@string/second_about_title"
                    android:textSize="25dp"
                    android:textStyle="bold"
                    android:textColor="@color/green"
                    android:gravity="left"
                    android:paddingLeft="15dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/second_about_description"
                    android:text="@string/second_about_description"
                    android:textSize="18dp"
                    android:textColor="@color/white"
                    android:gravity="left"
                    android:paddingLeft="15dp"/>
            </LinearLayout>

            <!-- third section-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:background="@drawable/about_background3">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/third_about_title"
                    android:text="About PeerPrep"
                    android:textSize="25dp"
                    android:textStyle="bold"
                    android:textColor="@color/green"
                    android:paddingLeft="15dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/third_about_description"
                    android:textSize="18dp"
                    android:textColor="@color/white"
                    android:gravity="left"
                    android:paddingLeft="15dp"/>

                <LinearLayout

                    android:layout_width="250dp"
                    android:layout_height="250dp"
                    android:layout_gravity="center"
                    android:background="#111828"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:layout_margin="10dp"
                    app:shapeAppearanceOverlay="@style/RoundedSquareImage">

                    <!-- Image floats above container (top layer) -->
                    <com.google.android.material.imageview.ShapeableImageView

                        android:layout_width="230dp"
                        android:layout_height="230dp"
                        android:layout_gravity="center"
                        android:src="@drawable/logo2"
                        android:scaleType="centerInside"
                        android:translationZ="4dp"
                        android:padding="10dp"
                        android:background="@color/black"
                        app:shapeAppearanceOverlay="@style/RoundedSquareImage"/>
                </LinearLayout>

            </LinearLayout>

            <!--fourth section-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:background="@drawable/about_background4"
                android:padding="20dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/fourth_about_title"
                    android:text="@string/fourth_about_title"
                    android:textSize="25dp"
                    android:textStyle="bold"
                    android:textColor="@color/green"
                    android:gravity="center"
                    android:layout_marginBottom="10dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/fourth_about_description"
                    android:text="@string/fourth_about_description"
                    android:textSize="18dp"
                    android:textColor="@color/white"
                    android:gravity="center"/>




            </LinearLayout>



            <!-- footer fragment-->
            <fragment
                android:id="@+id/footerFragment"
                android:name="com.bond.peerprep.FooterFragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>
            


            

    </androidx.core.widget.NestedScrollView>


    <!-- Floating Action Button -->
    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fab_book"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="10dp"
        android:text="Book a Free Trial →"
        android:textColor="#FFFFFF"
        app:backgroundTint="#2979FF"
        app:cornerRadius="20dp"
        app:icon="@null"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>